# 12_homework

./: CMakeLists.txt  README.md  bulk_server.cpp  main.cpp  mapper_all.h  produser_consumer.h  server.cpp  test_bulk.cpp
.github/workflows/: release.yml
average/: mapper.cpp  reducer.cpp  test_average.cpp
dispersion/: mapper.cpp  reducer.cpp  test_dispersion.cpp
